Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39202

DirectShow backend (-no-wmf-backend) static initialization failure

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.3.1
    • 5.3.0
    • Multimedia
    • None
    • Windows 7, XP
    • eadf1c8c41a41509a7c87b44d66b48cb8345acdb

    Description

      If you do a static build of Qt 5.3 without MediaFoundation support, by using -no-wmf-backend, you can't run any application.

      The code crashes because the static initializer for QWMMetaDataKeyLookup (directshowmetadatacontrol.cpp) references QString before it has been initialized.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ylopes Yoann Lopes
            dzedsystems Dyami Caliri
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes